# notion

./: .cursor-rules  README.md  pyproject.toml  requirements.txt  test.py
notion_orm/: __init__.py  database.py  page.py  properties.py
